--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.10",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
