Circle Logo Animation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/third-parties": "^16.0.10",
+    "framer-motion": "^12.24.7",
+    "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
